# raspberry-pi-cmake-example

./: FindRpiQt4.cmake  ToolchainRpi.cmake  UpdateRPiRootfs.sh
calculator/: CMakeLists.txt
